<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="26dp"
                android:text="@string/app_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="@string/soil_moisture_monitoring"
                android:textStyle="bold" />


            <pl.pawelkleczkowski.customgauge.CustomGauge
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="20dp"
                android:id="@+id/progress_circular"
                app:gaugePointStartColor="@color/colorAccent"
                app:gaugePointEndColor="@color/colorAccent"
                app:gaugeStartAngle="135"
                app:gaugeStrokeCap="ROUND"
                android:layout_gravity="center"
                app:gaugeStrokeColor="@color/grey"
                app:gaugeStrokeWidth="10dp"
                app:gaugeStartValue="0"
                app:gaugeEndValue="1023"
                app:gaugeSweepAngle="270"/>

            <TextView
                android:id="@+id/progress_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="@string/control_the_pump_directly_with_this_switch"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_weight=".5">
                <ImageView
                    android:id="@+id/bulb"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:src="@drawable/watering_can"
                    />
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bulb"
                    android:paddingTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="10dp"
                    android:text="@string/on_off"
                    android:id="@+id/water_pump"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/water_pump"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/frontpage"
                    android:text="@string/water_pump"
                    tools:ignore="SpUsage" />
            </RelativeLayout>







        </LinearLayout>

    </ScrollView>


</RelativeLayout>